[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/obj1.gd" type="Script" id=1]
[ext_resource path="res://textures/ibis1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="obj1" type="Node2D"]
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
